@@ -118,9 +118,10 @@ public class _codecs {
     }
 
     public static PyTuple escape_encode(String str, String errors) {
-        return encode_tuple(PyString.encode_UnicodeEscape(str, false),
-                str.length());
-
+        int size = str.length();
+        str = PyString.encode_UnicodeEscape(str, true);
+        // The string will be quoted, unquote
+        return encode_tuple(str.substring(1, str.length() - 1), size);
     }
 
     /* --- Character Mapping Codec --------------------------------------- */
